# main.go
@@ -13,12 +13,14 @@ import (
 
 	"github.com/gorilla/mux"
 	_ "github.com/lib/pq"
+	httpcli "github.com/unistack-org/micro-client-http"
 	jsoncodec "github.com/unistack-org/micro-codec-json"
 	fileconfig "github.com/unistack-org/micro-config-file"
 	grpcsrv "github.com/unistack-org/micro-server-grpc"
 	httpsrv "github.com/unistack-org/micro-server-http"
 	"github.com/unistack-org/micro/v3"
 	"github.com/unistack-org/micro/v3/api"
+	"github.com/unistack-org/micro/v3/client"
 	"github.com/unistack-org/micro/v3/config"
 	"github.com/unistack-org/micro/v3/logger"
 	"github.com/unistack-org/micro/v3/server"
@@ -96,6 +98,7 @@ func main() {
 			errCh <- err
 		}
 		db := <-dbCh
+
 		messageRepo := messagerepoimpl.NewMessageRepositoryImpl(db)
 		if err := pb.RegisterMessageServiceHandler(
 			srv.Server(),
@@ -126,6 +129,7 @@ func main() {
 		}
 		options := append([]micro.Option{},
 			micro.Server(httpsrv.NewServer()),
+			micro.Client(httpcli.NewClient()),
 			micro.Context(ctx),
 			micro.Name(cfg.Server.Name),
 			micro.Version(cfg.Server.Version),
@@ -143,6 +147,10 @@ func main() {
 				server.Context(ctx),
 				server.Codec("application/json", jsoncodec.NewCodec()),
 			)),
+			micro.Client(httpcli.NewClient(
+				client.ContentType("application/json"),
+				client.Codec("application/json", jsoncodec.NewCodec()),
+			)),
 		); err != nil {
 			errCh <- err
 		}
@@ -152,9 +160,55 @@ func main() {
 
 		messageRepo := messagerepoimpl.NewMessageRepositoryImpl(db)
 
-		handler := servicehandler.NewHandler(messageRepo, jsoncodec.NewCodec())
+		handler := servicehandler.NewHandler(messageRepo, jsoncodec.NewCodec(), svc.Client())
 
 		endpoints := pb.NewMessageServiceEndpoints()
+
+		if err := configureHandlerToEndpoints(router, handler, endpoints); err != nil {
+			errCh <- err
+		}
+		router.NotFoundHandler = http.HandlerFunc(func(rw http.ResponseWriter, r *http.Request) {
+			fmt.Printf("Not found, %v\n", r)
+		})
+		router.MethodNotAllowedHandler = http.HandlerFunc(func(rw http.ResponseWriter, r *http.Request) {
+			fmt.Printf("Method not allowed, %v\n", r)
+		})
+		if err := svc.Server().Handle(svc.Server().NewHandler(router)); err != nil {
+			errCh <- err
+		}
+		if err := svc.Run(); err != nil {
+			errCh <- err
+		}
+	}()
+
+	go func() {
+		options := append([]micro.Option{},
+			micro.Server(httpsrv.NewServer()),
+			micro.Context(ctx),
+			micro.Name("github-service"),
+			micro.Version("latest"),
+		)
+		svc := micro.NewService(options...)
+
+		if err := svc.Init(); err != nil {
+			errCh <- err
+		}
+		if err := svc.Init(
+			micro.Server(httpsrv.NewServer(
+				server.Name("github-service"),
+				server.Version("latest"),
+				server.Address(":9095"),
+				server.Context(ctx),
+				server.Codec("application/json", jsoncodec.NewCodec()),
+			)),
+		); err != nil {
+			errCh <- err
+		}
+		router := mux.NewRouter()
+
+		handler := servicehandler.NewGithubHandler(jsoncodec.NewCodec())
+
+		endpoints := pb.NewGithubServiceEndpoints()
 
 		if err := configureHandlerToEndpoints(router, handler, endpoints); err != nil {
 			errCh <- err
