# proto/message-service.pb.micro.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-micro. DO NOT EDIT.
-// source: proto/test-service.proto
+// source: proto/message-service.proto
 
 package pb
 
@@ -59,6 +59,18 @@ func NewMessageServiceEndpoints() []*api.Endpoint {
 			Stream:  true,
 			Handler: "rpc",
 		},
+		&api.Endpoint{
+			Name:    "MessageService.GetValidAPICall",
+			Path:    []string{"/api/v1/valid"},
+			Method:  []string{"GET"},
+			Handler: "rpc",
+		},
+		&api.Endpoint{
+			Name:    "MessageService.GetInvalidAPICall",
+			Path:    []string{"/api/v1/invalid"},
+			Method:  []string{"GET"},
+			Handler: "rpc",
+		},
 	}
 }
 
@@ -68,6 +80,8 @@ type MessageService interface {
 	MessageByID(ctx context.Context, req *SingleMessageRequest, opts ...client.CallOption) (*SingleMessageResponse, error)
 	SaveMessage(ctx context.Context, req *SaveMessageRequest, opts ...client.CallOption) (*SaveMessageResponse, error)
 	GetMessageStream(ctx context.Context, req *GetListMessageRequest, opts ...client.CallOption) (MessageService_GetMessageStreamService, error)
+	GetValidAPICall(ctx context.Context, req *APIRequest, opts ...client.CallOption) (*APIResponse, error)
+	GetInvalidAPICall(ctx context.Context, req *APIRequest, opts ...client.CallOption) (*APIResponse, error)
 }
 
 type messageService struct {
@@ -148,12 +162,32 @@ func (x *messageServiceGetMessageStream) Recv() (*GetListMessageResponse, error)
 	return m, nil
 }
 
+func (c *messageService) GetValidAPICall(ctx context.Context, req *APIRequest, opts ...client.CallOption) (*APIResponse, error) {
+	rsp := &APIResponse{}
+	err := c.c.Call(ctx, c.c.NewRequest(c.name, "MessageService.GetValidAPICall", req), rsp, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return rsp, nil
+}
+
+func (c *messageService) GetInvalidAPICall(ctx context.Context, req *APIRequest, opts ...client.CallOption) (*APIResponse, error) {
+	rsp := &APIResponse{}
+	err := c.c.Call(ctx, c.c.NewRequest(c.name, "MessageService.GetInvalidAPICall", req), rsp, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return rsp, nil
+}
+
 // Server API for MessageService service
 
 type MessageServiceHandler interface {
 	MessageByID(context.Context, *SingleMessageRequest, *SingleMessageResponse) error
 	SaveMessage(context.Context, *SaveMessageRequest, *SaveMessageResponse) error
 	GetMessageStream(context.Context, *GetListMessageRequest, MessageService_GetMessageStreamStream) error
+	GetValidAPICall(context.Context, *APIRequest, *APIResponse) error
+	GetInvalidAPICall(context.Context, *APIRequest, *APIResponse) error
 }
 
 func RegisterMessageServiceHandler(s server.Server, hdlr MessageServiceHandler, opts ...server.HandlerOption) error {
@@ -161,6 +195,8 @@ func RegisterMessageServiceHandler(s server.Server, hdlr MessageServiceHandler, 
 		MessageByID(ctx context.Context, req *SingleMessageRequest, rsp *SingleMessageResponse) error
 		SaveMessage(ctx context.Context, req *SaveMessageRequest, rsp *SaveMessageResponse) error
 		GetMessageStream(ctx context.Context, stream server.Stream) error
+		GetValidAPICall(ctx context.Context, req *APIRequest, rsp *APIResponse) error
+		GetInvalidAPICall(ctx context.Context, req *APIRequest, rsp *APIResponse) error
 	}
 	type MessageService struct {
 		messageService
@@ -184,6 +220,18 @@ func RegisterMessageServiceHandler(s server.Server, hdlr MessageServiceHandler, 
 		Path:    []string{"/api/v1/messages"},
 		Method:  []string{"GET"},
 		Stream:  true,
+		Handler: "rpc",
+	}))
+	opts = append(opts, api.WithEndpoint(&api.Endpoint{
+		Name:    "MessageService.GetValidAPICall",
+		Path:    []string{"/api/v1/valid"},
+		Method:  []string{"GET"},
+		Handler: "rpc",
+	}))
+	opts = append(opts, api.WithEndpoint(&api.Endpoint{
+		Name:    "MessageService.GetInvalidAPICall",
+		Path:    []string{"/api/v1/invalid"},
+		Method:  []string{"GET"},
 		Handler: "rpc",
 	}))
 	return s.Handle(s.NewHandler(&MessageService{h}, opts...))
@@ -239,4 +287,12 @@ func (x *messageServiceGetMessageStreamStream) RecvMsg(m interface{}) error {
 
 func (x *messageServiceGetMessageStreamStream) Send(m *GetListMessageResponse) error {
 	return x.stream.Send(m)
+}
+
+func (h *messageServiceHandler) GetValidAPICall(ctx context.Context, req *APIRequest, rsp *APIResponse) error {
+	return h.MessageServiceHandler.GetValidAPICall(ctx, req, rsp)
+}
+
+func (h *messageServiceHandler) GetInvalidAPICall(ctx context.Context, req *APIRequest, rsp *APIResponse) error {
+	return h.MessageServiceHandler.GetInvalidAPICall(ctx, req, rsp)
 }
